--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> pentatrion/vite-bundle ###
+/node_modules/
+/public/build/
+###< pentatrion/vite-bundle ###
+
+### php-storm ###
+.idea
+###< php-storm ###
