--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@
 ### php-storm ###
 .idea
 ###< php-storm ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
