add login to app via frontend

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,7 @@ controllers:
 
 api_login_check:
     path: /api/login
+
+user_controller:
+    resource: ../src/User/Controller/
+    type: annotation
