--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,17 @@
         "doctrine/orm": "^2.15",
         "lexik/jwt-authentication-bundle": "^2.19",
         "pentatrion/vite-bundle": "^3.1",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.22",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
+        "symfony/property-access": "6.3.*",
+        "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/security-bundle": "6.3.*",
+        "symfony/serializer": "6.3.*",
         "symfony/uid": "6.3.*",
         "symfony/yaml": "6.3.*"
     },
