--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,9 @@ services:
         resource: '../src/Controller/**/*Controller.php'
         tags: [ { name: 'controller.service_arguments' } ]
 
+    App\User\Controller\:
+        resource: '../src/User/Controller'
+        tags: [ { name: 'controller.service_arguments' } ]
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
