--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,6 +7,12 @@ controllers:
 api_login_check:
     path: /api/login
 
+vue_route:
+    path: '/{vueRoute?}'
+    controller: App\Controller\VueController
+    requirements:
+        vueRoute: '^(?!api).+'
+
 user_controller:
     resource: ../src/User/Controller/
     type: annotation
