--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@vitejs/plugin-vue": "^4.2.3",
         "axios": "^1.4.0",
         "core-js": "^3.29.0",
+        "pinia": "^2.1.7",
         "roboto-fontface": "*",
         "vue": "^3.2.0",
         "vue-axios": "^3.5.2",
