--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,7 @@
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
         "symfony/maker-bundle": "^1.49",
-        "symfony/phpunit-bridge": "^7.0"
+        "symfony/phpunit-bridge": "^7.0",
+        "symplify/config-transformer": "^12.3"
     }
 }
